--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "@angular2-material/icon": "^2.0.0-alpha.8-2",
+    "@types/socket.io-client": "^1.4.29",
+    "angular2-jwt": "^0.1.28",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "immutable": "^3.8.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
