--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "immutable": "^3.8.1",
     "material-design-icons": "^3.0.1",
+    "ng2-validators": "^1.8.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
